Rename centers and place_filed_centers to pfcs in all files.

--- a/1_basic_simulations.ipynb
+++ b/1_basic_simulations.ipynb
@@ -107,12 +107,14 @@
     "# place field ranges\n",
     "pf_lb = [P.BOX_L - 0.1 * (P.BOX_R - P.BOX_L), P.BOX_B - 0.1 * (P.BOX_T - P.BOX_B)]\n",
     "pf_ub = [P.BOX_R + 0.1 * (P.BOX_R - P.BOX_L), P.BOX_T + 0.1 * (P.BOX_T - P.BOX_B)]\n",
-    "centers = np.random.uniform(pf_lb, pf_ub, (N, 2)).T\n",
     "\n",
-    "stds = P.L_PL * np.ones(centers.shape[1])\n",
-    "max_rates = P.R_MAX_PL * np.ones(centers.shape[1])\n",
+    "# place field centers\n",
+    "pfcs = np.random.uniform(pf_lb, pf_ub, (N, 2)).T\n",
     "\n",
-    "spks_up = upstream_spks_from_traj(ts, traj.xys, centers, stds, max_rates)\n",
+    "stds = P.L_PL * np.ones(pfcs.shape[1])\n",
+    "max_rates = P.R_MAX_PL * np.ones(pfcs.shape[1])\n",
+    "\n",
+    "spks_up = upstream_spks_from_traj(ts, traj.xys, pfcs, stds, max_rates)\n",
     "\n",
     "time_file = save_time_file(os.path.join(SAVE_DIR, 'time.npy'), ts)\n",
     "traj_file = traj.save(os.path.join(SAVE_DIR, 'traj.npy'))\n",
@@ -124,8 +126,8 @@
     "ax.plot(*traj.xys.T, lw=2, color='k')\n",
     "\n",
     "# place fields\n",
-    "for center, std in zip(centers.T, stds):\n",
-    "    ell = Ellipse(center, width=std, height=std, angle=0, color='g', alpha=0.1)\n",
+    "for pfc, std in zip(pfcs.T, stds):\n",
+    "    ell = Ellipse(pfc, width=std, height=std, angle=0, color='g', alpha=0.1)\n",
     "    ax.add_artist(ell)\n",
     "    \n",
     "ax.set_xlim(BOX[:2])\n",
@@ -182,7 +184,7 @@
     "vs_init = P.E_L_PC * np.ones(N)\n",
     "gs_init = {syn: np.zeros(N) for syn in SYNS}\n",
     "ntwk_response = ntwk.run(spks_up, vs_init, gs_init, P.DT)\n",
-    "ntwk_response.place_field_centers = centers\n",
+    "ntwk_response.pfcs = pfcs\n",
     "\n",
     "ntwk_file = ntwk_response.save(os.path.join(SAVE_DIR, 'ntwk.npy'))"
    ]
