--- a/3_inhibition_and_recurrence.ipynb
+++ b/3_inhibition_and_recurrence.ipynb
@@ -83,21 +83,22 @@
     "ts = np.arange(0, DUR, P.DT)\n",
     "time_file = save_time_file(os.path.join(SAVE_DIR, 'time.npy'), ts)\n",
     "\n",
-    "# build place fields\n",
+    "# place field ranges\n",
     "pf_lb = [P.BOX_L - 0.1 * (P.BOX_R - P.BOX_L), P.BOX_B - 0.1 * (P.BOX_T - P.BOX_B)]\n",
     "pf_ub = [P.BOX_R + 0.1 * (P.BOX_R - P.BOX_L), P.BOX_T + 0.1 * (P.BOX_T - P.BOX_B)]\n",
     "\n",
-    "centers = np.random.uniform(pf_lb, pf_ub, (N_PC, 2)).T\n",
-    "centers = cc([centers, np.nan*np.zeros((2, N_INH))], axis=1)\n",
+    "# place field centers\n",
+    "pfcs = np.random.uniform(pf_lb, pf_ub, (N_PC, 2)).T\n",
+    "pfcs = cc([pfcs, np.nan*np.zeros((2, N_INH))], axis=1)\n",
     "\n",
-    "stds = P.L_PL * np.ones(centers.shape[1])\n",
+    "stds = P.L_PL * np.ones(pfcs.shape[1])\n",
     "\n",
     "# build trajectory\n",
     "xys = np.zeros((len(ts), 2))\n",
     "traj = Traj(ts=ts, xys=xys)\n",
     "\n",
     "# assign visual positions\n",
-    "positions = centers.copy()\n",
+    "positions = pfcs.copy()\n",
     "positions[0, -N_INH:] = np.random.normal(POS_INH_MEAN[0], POS_INH_SPREAD[0], N_INH)\n",
     "positions[1, -N_INH:] = np.random.normal(POS_INH_MEAN[1], POS_INH_SPREAD[1], N_INH)\n",
     "\n",
@@ -128,7 +129,7 @@
     "    gs_init = {syn: np.zeros(N_PC+N_INH) for syn in SYNS}\n",
     "    \n",
     "    resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
-    "    resp.place_field_centers = centers\n",
+    "    resp.pfcs = pfcs\n",
     "    resp.cell_types = CELL_TYPES\n",
     "    \n",
     "    # save responses\n",
@@ -195,8 +196,8 @@
     "ax.scatter(0, 0, c='k', s=300, zorder=1)\n",
     "\n",
     "# place fields\n",
-    "for center, std in zip(centers.T[:N_PC], stds[:N_PC]):\n",
-    "    ell = Ellipse(center, width=std, height=std, angle=0, color='g', alpha=0.1, zorder=0)\n",
+    "for pfc, std in zip(pfcs.T[:N_PC], stds[:N_PC]):\n",
+    "    ell = Ellipse(pfc, width=std, height=std, angle=0, color='g', alpha=0.1, zorder=0)\n",
     "    ax.add_artist(ell)\n",
     "    \n",
     "ax.set_xlim(BOX_PC[:2])\n",
@@ -242,7 +243,7 @@
    "source": [
     "# generate upstream spks\n",
     "max_rates = P.R_MAX_PL * np.ones(N_PC)\n",
-    "spks_up = upstream_spks_from_traj(ts, xys, centers[:, :N_PC], stds[:N_PC], max_rates=max_rates)\n",
+    "spks_up = upstream_spks_from_traj(ts, xys, pfcs[:, :N_PC], stds[:N_PC], max_rates=max_rates)\n",
     "\n",
     "# set up cxns\n",
     "ws_rcr = {'AMPA': np.zeros((N, N)), 'GABA': np.zeros((N, N))}\n",
@@ -365,11 +366,11 @@
     "\n",
     "# generate upstream spks\n",
     "max_rates = P.R_MAX_PL * np.ones(N_PC)\n",
-    "spks_up = upstream_spks_from_traj(ts, xys, centers[:, :N_PC], stds[:N_PC], max_rates=max_rates)\n",
+    "spks_up = upstream_spks_from_traj(ts, xys, pfcs[:, :N_PC], stds[:N_PC], max_rates=max_rates)\n",
     "\n",
     "# set up cxns\n",
     "w_a_rcr = np.zeros((N, N))\n",
-    "w_a_rcr[cxns_pcs_rcr(centers, z_pc=Z_PC, l_pc=L_PC)] = P.W_A_PC_PC\n",
+    "w_a_rcr[cxns_pcs_rcr(pfcs, z_pc=Z_PC, l_pc=L_PC)] = P.W_A_PC_PC\n",
     "\n",
     "ws_rcr = {'AMPA': w_a_rcr, 'GABA': np.zeros((N, N))}\n",
     "\n",
@@ -492,11 +493,11 @@
     "\n",
     "# generate upstream spks\n",
     "max_rates = P.R_MAX_PL * np.ones(N_PC)\n",
-    "spks_up = upstream_spks_from_traj(ts, xys, centers[:, :N_PC], stds[:N_PC], max_rates=max_rates)\n",
+    "spks_up = upstream_spks_from_traj(ts, xys, pfcs[:, :N_PC], stds[:N_PC], max_rates=max_rates)\n",
     "\n",
     "# set up rcr cxns\n",
     "w_a_rcr = np.zeros((N, N))\n",
-    "w_a_rcr[cxns_pcs_rcr(centers, z_pc=Z_PC, l_pc=L_PC)] = P.W_A_PC_PC\n",
+    "w_a_rcr[cxns_pcs_rcr(pfcs, z_pc=Z_PC, l_pc=L_PC)] = P.W_A_PC_PC\n",
     "\n",
     "w_g_rcr = np.zeros((N, N))\n",
     "w_g_rcr[:N_PC, -N_INH:] \\\n",
@@ -616,11 +617,11 @@
     "\n",
     "# generate upstream spks\n",
     "max_rates = P.R_MAX_PL * np.ones(N_PC)\n",
-    "spks_up = upstream_spks_from_traj(ts, xys, centers[:, :N_PC], stds[:N_PC], max_rates=max_rates)\n",
+    "spks_up = upstream_spks_from_traj(ts, xys, pfcs[:, :N_PC], stds[:N_PC], max_rates=max_rates)\n",
     "\n",
     "# set up rcr cxns\n",
     "w_a_rcr = np.zeros((N, N))\n",
-    "w_a_rcr[cxns_pcs_rcr(centers, z_pc=Z_PC, l_pc=L_PC)] = P.W_A_PC_PC\n",
+    "w_a_rcr[cxns_pcs_rcr(pfcs, z_pc=Z_PC, l_pc=L_PC)] = P.W_A_PC_PC\n",
     "w_a_rcr[-N_INH:, :N_PC] \\\n",
     "    = P.W_A_INH_PC * (np.random.rand(N_INH, N_PC) < P_INH_PC).astype(float)\n",
     "\n",
