--- a/4_replay.ipynb
+++ b/4_replay.ipynb
@@ -159,10 +159,12 @@
     "# place field ranges\n",
     "pf_lb = [P.BOX_L - 0.1 * (P.BOX_R - P.BOX_L), P.BOX_B - 0.1 * (P.BOX_T - P.BOX_B)]\n",
     "pf_ub = [P.BOX_R + 0.1 * (P.BOX_R - P.BOX_L), P.BOX_T + 0.1 * (P.BOX_T - P.BOX_B)]\n",
-    "centers = np.random.uniform(pf_lb, pf_ub, (N_PC, 2)).T\n",
     "\n",
-    "stds = P.L_PL * np.ones(centers.shape[1])\n",
-    "max_rates = P.R_MAX_PL * np.ones(centers.shape[1])\n",
+    "# place field centers\n",
+    "pfcs = np.random.uniform(pf_lb, pf_ub, (N_PC, 2)).T\n",
+    "\n",
+    "stds = P.L_PL * np.ones(pfcs.shape[1])\n",
+    "max_rates = P.R_MAX_PL * np.ones(pfcs.shape[1])\n",
     "\n",
     "save_time_file(TIME_FILE_RUN, ts)\n",
     "traj.save(TRAJ_FILE_RUN)\n",
@@ -174,8 +176,8 @@
     "ax.plot(*traj.xys.T, lw=2, color='k')\n",
     "\n",
     "# place fields\n",
-    "for center, std in zip(centers.T, stds):\n",
-    "    ell = Ellipse(center, width=std, height=std, angle=0, color='g', alpha=0.1)\n",
+    "for pfc, std in zip(pfcs.T, stds):\n",
+    "    ell = Ellipse(pfc, width=std, height=std, angle=0, color='g', alpha=0.1)\n",
     "    ax.add_artist(ell)\n",
     "    \n",
     "ax.set_xlim(BOX[:2])\n",
@@ -228,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "spks_up_pl = upstream_spks_from_traj(ts, traj.xys, centers, stds, max_rates)\n",
+    "spks_up_pl = upstream_spks_from_traj(ts, traj.xys, pfcs, stds, max_rates)\n",
     "spks_up_ec = np.zeros((len(ts), N_PC), dtype=int)\n",
     "\n",
     "spks_up = np.concatenate([spks_up_pl, spks_up_ec], axis=1)"
@@ -253,7 +255,7 @@
     "ntwk = LIFNtwk(**NTWK_KWARGS, plasticity=PLASTICITY)\n",
     "vs_init = P.E_L_PC * np.ones(N_PC)\n",
     "resp = ntwk.run(spks_up=spks_up, dt=P.DT, vs_init=vs_init)\n",
-    "resp.place_field_centers = centers\n",
+    "resp.pfcs = pfcs\n",
     "\n",
     "resp.save(NTWK_FILE_RUN);"
    ]
@@ -490,7 +492,7 @@
     "    resting_size=30,\n",
     "    spk_size=350,\n",
     "    amp=4,\n",
-    "    positions=centers,\n",
+    "    positions=pfcs,\n",
     "    frames_per_spk=2,\n",
     "    title='Network activity',\n",
     "    x_label='x (m)',\n",
@@ -590,7 +592,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from aux import load\n",
@@ -602,7 +606,7 @@
     "\n",
     "w_up_n_[mask_n_] = w_plastic_n_[-1]\n",
     "\n",
-    "place_field_centers_ = data['place_field_centers']\n",
+    "pfcs_ = data['pfcs']\n",
     "\n",
     "data = None"
    ]
@@ -754,14 +758,14 @@
     "np.random.seed(0)\n",
     "\n",
     "# set up place fields\n",
-    "place_field_centers = np.nan * np.zeros((2, N))\n",
-    "place_field_centers[:, :N_PC] = place_field_centers_\n",
+    "pfcs = np.nan * np.zeros((2, N))\n",
+    "pfcs[:, :N_PC] = pfcs_\n",
     "\n",
     "# set up cxns\n",
     "\n",
     "# recurrent\n",
     "w_a_rcr = np.zeros((N, N))\n",
-    "w_a_rcr[cxns_pcs_rcr(place_field_centers, z_pc=Z_PC, l_pc=L_PC)] = P.W_A_PC_PC\n",
+    "w_a_rcr[cxns_pcs_rcr(pfcs, z_pc=Z_PC, l_pc=L_PC)] = P.W_A_PC_PC\n",
     "\n",
     "ws_rcr = {'AMPA': w_a_rcr, 'NMDA': np.zeros((N, N)), 'GABA': np.zeros((N, N))}\n",
     "\n",
@@ -855,8 +859,8 @@
     "\n",
     "# add synchronous place-tuned PC input\n",
     "# get cell idxs for cells within an L_PL radius of REPLAY_START_POS\n",
-    "dx = place_field_centers[0] - REPLAY_START_POS[0]\n",
-    "dy = place_field_centers[1] - REPLAY_START_POS[1]\n",
+    "dx = pfcs[0] - REPLAY_START_POS[0]\n",
+    "dy = pfcs[1] - REPLAY_START_POS[1]\n",
     "dx[np.isnan(dx)] = np.inf\n",
     "dy[np.isnan(dy)] = np.inf\n",
     "mask_near = np.sqrt(dx**2 + dy**2) < P.L_PL\n",
@@ -883,7 +887,7 @@
     "vs_init = e_l.copy()\n",
     "\n",
     "resp = ntwk.run(spks_up=spks_up, dt=P.DT, vs_init=vs_init)\n",
-    "resp.place_field_centers = place_field_centers\n",
+    "resp.pfcs = pfcs\n",
     "resp.cell_types = CELL_TYPES\n",
     "\n",
     "# save responses\n",
@@ -989,7 +993,7 @@
    "outputs": [],
    "source": [
     "# assign visual positions\n",
-    "positions = place_field_centers.copy()\n",
+    "positions = pfcs.copy()\n",
     "positions[0, -N_INH:] = np.random.normal(POS_INH_MEAN[0], POS_INH_SPREAD[0], N_INH)\n",
     "positions[1, -N_INH:] = np.random.normal(POS_INH_MEAN[1], POS_INH_SPREAD[1], N_INH)"
    ]
