--- a/5A_balance.ipynb
+++ b/5A_balance.ipynb
@@ -762,7 +762,7 @@
     "            for xmpl in EXAMPLES:\n",
     "                if (zl_ctr, ni_ctr, tr_ctr) == xmpl:\n",
     "                    \n",
-    "                    rsp.place_field_centers = pfcs\n",
+    "                    rsp.pfcs = pfcs\n",
     "                    \n",
     "                    xmpl_path = '{}_Z_PC_{}_L_PC_{}_N_INIT_{}_TR_{}.npy'.format(\n",
     "                        EXC_PRFX_NTWK, z_pc, l_pc, n_init, tr_ctr+1)\n",
@@ -905,7 +905,7 @@
     "        EXC_DIR, 'ntwk', 'Z_PC_{}_L_PC_{}_N_INIT_{}_TR_{}/frame'.format(\n",
     "            z_pc, l_pc, n_init, tr_ctr))\n",
     "    \n",
-    "    positions = aux.load(xmpl_path)['place_field_centers']\n",
+    "    positions = aux.load(xmpl_path)['pfcs']\n",
     "    \n",
     "    frames.append(build_frames.ntwk_activity(\n",
     "        save_prefix=save_prefix,\n",
