--- a/5B_balance.ipynb
+++ b/5B_balance.ipynb
@@ -570,7 +570,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set initial voltages and conductances\n",
@@ -690,7 +692,7 @@
     "for xmp_idx in XMP_IDXS:\n",
     "    \n",
     "    rsp = deepcopy(rsps[xmp_idx])\n",
-    "    rsp.place_field_centers = pfcs\n",
+    "    rsp.pfcs = pfcs\n",
     "    \n",
     "    xmp_ntwk_path = '{}_w_g_pc_inh_{}.npy'.format(FULL_PRFX_NTWK, WS_G_PC_INH[xmp_idx])\n",
     "    xmp_ntwk_paths.append(rsp.save(xmp_ntwk_path))"
