--- a/parameters_aux.ipynb
+++ b/parameters_aux.ipynb
@@ -200,7 +200,7 @@
     "# loop over max synaptic input rate values\n",
     "ts = np.arange(0, DUR, P.DT)\n",
     "xys = np.zeros((len(ts), 2))\n",
-    "centers = np.zeros((2, 1))\n",
+    "pfcs = np.zeros((2, 1))\n",
     "stds = np.array([0.1])\n",
     "\n",
     "spk_rate_itvl_mask = ((ts >= SPK_RATE_ITVL[0]) * (ts < SPK_RATE_ITVL[1])).astype(bool)\n",
@@ -218,7 +218,7 @@
     "    \n",
     "    # get upstream spikes and run ntwk\n",
     "    max_rates = np.array([max_rate_up])\n",
-    "    spks_up = upstream_spks_from_traj(ts, xys, centers, stds, max_rates)\n",
+    "    spks_up = upstream_spks_from_traj(ts, xys, pfcs, stds, max_rates)\n",
     "    resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
     "    \n",
     "    # calculate spike rate\n",
@@ -261,7 +261,7 @@
    "source": [
     "# show the membrane potential dynamics given this input rate\n",
     "max_rates = np.array([P.R_MAX_PL])\n",
-    "spks_up = upstream_spks_from_traj(ts, xys, centers, stds, max_rates)\n",
+    "spks_up = upstream_spks_from_traj(ts, xys, pfcs, stds, max_rates)\n",
     "\n",
     "resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
     "\n",
