--- a/test_anim_0_basic.ipynb
+++ b/test_anim_0_basic.ipynb
@@ -54,13 +54,13 @@
     "xs = np.arange(len(STARTS))\n",
     "ys = np.arange(len(STARTS))\n",
     "\n",
-    "place_field_centers = np.array([xs, ys])\n",
+    "pfcs = np.array([xs, ys])\n",
     "\n",
     "# save everything\n",
     "save_time_file('test_anim/time.npy', ts)\n",
     "ntwk_response = NtwkResponse(\n",
     "    vs, spks, V_REST, V_TH,\n",
-    "    gs=None, ws_rcr=None, ws_up=None, place_field_centers=place_field_centers)\n",
+    "    gs=None, ws_rcr=None, ws_up=None, pfcs=pfcs)\n",
     "ntwk_response.save('test_anim/ntwk.npy')"
    ]
   },
