--- a/test_anim_1_colors_weights.ipynb
+++ b/test_anim_1_colors_weights.ipynb
@@ -102,7 +102,7 @@
     "\n",
     "resp = NtwkResponse(\n",
     "    vs=vs, spks=spks, gs=gs, ws_rcr=ws_rcr, ws_up=ws_up,\n",
-    "    v_rest=v_rest, v_th=v_th, cell_types=cell_types, place_field_centers=positions)\n",
+    "    v_rest=v_rest, v_th=v_th, cell_types=cell_types, pfcs=positions)\n",
     "\n",
     "save_time_file(TIME_FILE, ts)\n",
     "resp.save(NTWK_FILE)\n",
