Remove minimum upstream spks to elicit downstream spk param.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -101,8 +101,7 @@
     "|$\\tau_r$|`T_R`|refractory period for all cell types|2|ms|typical absolute refractory period value|\n",
     "|$E_{AHP}$|`E_AHP`|CA3 PC afterhyperpolarization (potassium) reversal potential|-70|mV|typical K+ reversal potential|\n",
     "|$\\tau_{AHP}$|`T_AHP`|CA3 PC afterhyperpolarization (potassium) time constant|?|ms||\n",
-    "|$w_{AHP}$|`W_AHP`|CA3 PC afterhyperpolarization (potassium) magnitude|?|-||\n",
-    "|$U_{A}^{PC}$|`U_A_PC`|min # AMPA inputs to elicit PC spike|19|spks|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|"
+    "|$w_{AHP}$|`W_AHP`|CA3 PC afterhyperpolarization (potassium) magnitude|?|-||"
    ]
   },
   {
