--- a/5B_balance.ipynb
+++ b/5B_balance.ipynb
@@ -23,7 +23,7 @@
     "import os\n",
     "\n",
     "import aux\n",
-    "from ntwk import LIFNtwk, cxns_pcs_rcr, ridge_h, sample_vs_gs_init\n",
+    "from ntwk import LIFNtwk, cxns_pcs_rcr, ridge_h\n",
     "from plot import raster, set_font_size\n",
     "\n",
     "import PARAMETERS as P\n",
@@ -50,6 +50,33 @@
     "\n",
     "FULL_PATH_TIME = os.path.join(FULL_DIR, 'time.npy')\n",
     "FULL_PRFX_NTWK = os.path.join(FULL_DIR, 'ntwk')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sample_vs_gs_init(ws_n_pc_ec, v_g_init):\n",
+    "    \"\"\"\n",
+    "    Return an initial membrane voltage and NMDA conductance for each\n",
+    "    of several PCs, depending on their EC->PC cxn weight.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    dw = np.mean(np.diff(v_g_init['weights']))\n",
+    "    w_idxs = np.round((ws_n_pc_ec - v_g_init['weights'][0])/ dw).astype(int)\n",
+    "    \n",
+    "    vs = np.nan * np.zeros(len(ws_n_pc_ec))\n",
+    "    gs = {'NMDA': np.nan * np.zeros(len(ws_n_pc_ec))}\n",
+    "    \n",
+    "    for nrn_ctr, w_idx in enumerate(w_idxs):\n",
+    "        vs[nrn_ctr] = np.random.choice(v_g_init['vs'][:, w_idx])\n",
+    "        gs['NMDA'][nrn_ctr] = np.random.choice(v_g_init['gs'][:, w_idx])\n",
+    "        \n",
+    "    return vs, gs"
    ]
   },
   {
