Reorganize ridge search control panels.

--- a/s2_ridge_trials.ipynb
+++ b/s2_ridge_trials.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -35,26 +35,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 searchers active in last 300 s.\n",
+      "\n",
+      "The following searchers were suspended by errors:\n",
+      "\n",
+      "Look up error tracebacks using read_search_error(id).\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# list active searchers\n",
-    "ridge.search_status(smln_id='test_guided', recent=10000)"
+    "ridge.search_status(smln_id='test_forced', recent=30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No error found in searcher 8.\n"
+     ]
+    }
+   ],
    "source": [
     "# read optional error message\n",
-    "ridge.read_search_error(searcher_id=40)"
+    "ridge.read_search_error(searcher_id=8)"
    ]
   },
   {
