Update objective function parameter set definitions.

--- a/s1_ridge_trials.ipynb
+++ b/s1_ridge_trials.ipynb
@@ -65,8 +65,8 @@
     }
    ],
    "source": [
-    "# pre-compute v/g_n vs. w_n_pc_ec and rate_ec distributions\n",
-    "ridge_pre.v_g_n_vs_w_n_pc_ec_rate_ec(C, P);"
+    "# pre-compute v/g_n vs. w_n_pc_ec and fr_ec distributions\n",
+    "ridge_pre.v_g_n_vs_w_n_pc_ec_fr_ec(C, P);"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "# load pre-computed files\n",
     "pre = {\n",
     "    'w_n_pc_ec_vs_dist': aux.load(C.PATH_W_N_PC_EC_VS_DIST),\n",
-    "    'v_g_n_vs_w_n_pc_ec_rate_ec': aux.load(C.PATH_V_G_N_VS_W_N_PC_EC_RATE_EC)\n",
+    "    'v_g_n_vs_w_n_pc_ec_fr_ec': aux.load(C.PATH_V_G_N_VS_W_N_PC_EC_FR_EC)\n",
     "}\n",
     "\n",
     "# define objective function\n",
@@ -182,16 +182,16 @@
     "    N_TRIALS_W_PRE = 10\n",
     "    DIST_PRE = np.linspace(0, 0.3, 25)\n",
     "\n",
-    "    ## V, G_N VS W_N_PC_EC, RATE_EC COMPUTATION\n",
+    "    ## V, G_N VS W_N_PC_EC, FR_EC COMPUTATION\n",
     "\n",
-    "    PATH_V_G_N_VS_W_N_PC_EC_RATE_EC = 'search/pre/ridge/test_v_g_n_vs_w_n_pc_ec_rate_ec.npy'\n",
+    "    PATH_V_G_N_VS_W_N_PC_EC_FR_EC = 'search/pre/ridge/test_v_g_n_vs_w_n_pc_ec_fr_ec.npy'\n",
     "\n",
     "    DUR_V_G_PRE = 6\n",
     "    MEASURE_START_V_G_PRE = 1\n",
     "    N_TIMEPOINTS_V_G_PRE = 1000\n",
     "\n",
     "    W_N_PC_EC_PRE = np.linspace(0, 0.002, 50)\n",
-    "    RATE_EC_PRE = np.linspace(20, 70, 20)\n",
+    "    FR_EC_PRE = np.linspace(20, 70, 20)\n",
     "    \n",
     "C = RidgeGlobal()"
    ]
@@ -264,9 +264,9 @@
     }
    ],
    "source": [
-    "ridge_pre.v_g_n_vs_w_n_pc_ec_rate_ec(C, P)\n",
-    "assert os.path.isfile(C.PATH_V_G_N_VS_W_N_PC_EC_RATE_EC)\n",
-    "os.remove(C.PATH_V_G_N_VS_W_N_PC_EC_RATE_EC)"
+    "ridge_pre.v_g_n_vs_w_n_pc_ec_fr_ec(C, P)\n",
+    "assert os.path.isfile(C.PATH_V_G_N_VS_W_N_PC_EC_FR_EC)\n",
+    "os.remove(C.PATH_V_G_N_VS_W_N_PC_EC_FR_EC)"
    ]
   },
   {
@@ -318,7 +318,7 @@
     "# load pre-computed files\n",
     "pre = {\n",
     "    'w_n_pc_ec_vs_dist': aux.load(C.PATH_W_N_PC_EC_VS_DIST),\n",
-    "    'v_g_n_vs_w_n_pc_ec_rate_ec': aux.load(C.PATH_V_G_N_VS_W_N_PC_EC_RATE_EC)\n",
+    "    'v_g_n_vs_w_n_pc_ec_fr_ec': aux.load(C.PATH_V_G_N_VS_W_N_PC_EC_FR_EC)\n",
     "}\n",
     "\n",
     "# define test params\n",
@@ -328,21 +328,21 @@
     "        'RIDGE_H': 0.25, 'RIDGE_W': 4, 'P_INH': 0.1, 'RHO_PC': 1000, \n",
     "        'Z_PC': 0.25, 'L_PC': 0.2, 'W_A_PC_PC': 0.0085,\n",
     "        'P_A_INH_PC': 0.1, 'W_A_INH_PC': 0.009, 'P_G_PC_INH': 0, 'W_G_PC_INH': 0,\n",
-    "        'RATE_EC': 35\n",
+    "        'FR_EC': 35\n",
     "    },\n",
     "    # exc-only saturated propagation\n",
     "    {\n",
     "        'RIDGE_H': 0.25, 'RIDGE_W': 4, 'P_INH': 0.1, 'RHO_PC': 1000, \n",
     "        'Z_PC': 0.8, 'L_PC': 0.2, 'W_A_PC_PC': 0.0085,\n",
     "        'P_A_INH_PC': 0.1, 'W_A_INH_PC': 0.009, 'P_G_PC_INH': 0, 'W_G_PC_INH': 0,\n",
-    "        'RATE_EC': 35\n",
+    "        'FR_EC': 35\n",
     "    },\n",
     "    # exc/inh non-saturated propagation\n",
     "    {\n",
     "        'RIDGE_H': 0.25, 'RIDGE_W': 4, 'P_INH': 0.1, 'RHO_PC': 1000, \n",
     "        'Z_PC': 0.8, 'L_PC': 0.2, 'W_A_PC_PC': 0.0085,\n",
     "        'P_A_INH_PC': 0.1, 'W_A_INH_PC': 0.009, 'P_G_PC_INH': 0.1, 'W_G_PC_INH': 0.004,\n",
-    "        'RATE_EC': 35\n",
+    "        'FR_EC': 35\n",
     "    },\n",
     "]\n",
     "\n",
@@ -524,7 +524,7 @@
     "    \n",
     "    mask = np.argsort(ntwk.pfcs[0, :])[:n_stim]\n",
     "    \n",
-    "    spks_up = np.random.poisson(p['RATE_EC'] * P.DT, (int(smln_dur/P.DT), ntwk.n_ec))\n",
+    "    spks_up = np.random.poisson(p['FR_EC'] * P.DT, (int(smln_dur/P.DT), ntwk.n_ec))\n",
     "    spks_forced = spks_forced_rand(ntwk, mask, itvl, freq, P.DT)\n",
     "    \n",
     "    rsp = ntwk.run(spks_up, P.DT, vs_0, gs_0, spks_forced=spks_forced)\n",
@@ -1316,7 +1316,7 @@
     "for trial in trials_1:\n",
     "    \n",
     "    fluc_ = [\n",
-    "        trial.ridge_h, trial.ridge_w, trial.rho_pc,\n",
+    "        trial.ridge_h, trial.ridge_w, trial.p_inh, trial.rho_pc,\n",
     "        trial.w_a_pc_pc, trial.p_a_inh_pc, trial.w_a_inh_pc,\n",
     "    ]\n",
     "    \n",
@@ -1324,7 +1324,7 @@
     "    \n",
     "    static_ = [\n",
     "        trial.p_g_pc_inh, trial.w_g_pc_inh,\n",
-    "        trial.w_n_pc_ec_i, trial.rate_ec,\n",
+    "        trial.fr_ec,\n",
     "    ]\n",
     "    \n",
     "    static_1.append(static_)\n",
@@ -1337,7 +1337,7 @@
     "for trial in trials_2:\n",
     "    \n",
     "    fluc_ = [\n",
-    "        trial.ridge_h, trial.ridge_w, trial.rho_pc,\n",
+    "        trial.ridge_h, trial.ridge_w, trial.p_inh, trial.rho_pc,\n",
     "        trial.w_a_pc_pc, trial.p_a_inh_pc, trial.w_a_inh_pc,\n",
     "    ]\n",
     "    \n",
@@ -1345,7 +1345,7 @@
     "    \n",
     "    static_ = [\n",
     "        trial.p_g_pc_inh, trial.w_g_pc_inh,\n",
-    "        trial.w_n_pc_ec_i, trial.rate_ec,\n",
+    "        trial.fr_ec,\n",
     "    ]\n",
     "    \n",
     "    static_2.append(static_)\n",
