--- a/s1_ridge_trials.ipynb
+++ b/s1_ridge_trials.ipynb
@@ -107,58 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please commit relevant files and enter commit id (or \"q\" to quit): bbe7ab3\n",
-      "\n",
-      "2 searchers launched.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[<Thread(Thread-4, started 123145435385856)>,\n",
-       " <Thread(Thread-5, started 123145440641024)>]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-5:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/rkp/anaconda3/envs/py3/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/Users/rkp/anaconda3/envs/py3/lib/python3.6/threading.py\", line 864, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/Users/rkp/Dropbox/Repositories/replay/search/ridge.py\", line 37, in targ\n",
-      "    role, obj, global_config, seed=seed, commit=commit)\n",
-      "NameError: name 'global_config' is not defined\n",
-      "Exception in thread Thread-4:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/rkp/anaconda3/envs/py3/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/Users/rkp/anaconda3/envs/py3/lib/python3.6/threading.py\", line 864, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/Users/rkp/Dropbox/Repositories/replay/search/ridge.py\", line 37, in targ\n",
-      "    role, obj, global_config, seed=seed, commit=commit)\n",
-      "NameError: name 'global_config' is not defined\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "ridge.launch_searchers('smln_0_random', obj, C, 2)"
+    "ridge.search('smln_0_random', obj, C)"
    ]
   },
   {
