--- a/s2_ridge_trials.ipynb
+++ b/s2_ridge_trials.ipynb
@@ -15,18 +15,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from search import ridge\n",
-    "from search import ridge_viz"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 searchers active in last 300 s.\n",
+      "1 searchers active in last 30 s.\n",
       "\n",
       "The following searchers were suspended by errors:\n",
       "\n",
@@ -52,26 +40,29 @@
     }
    ],
    "source": [
+    "from search import ridge\n",
+    "from search import ridge_viz\n",
+    "\n",
     "# list active searchers\n",
-    "ridge.search_status(smln_id='test_forced', recent=30)"
+    "ridge.search_status(smln_id='smln_0', recent=30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No error found in searcher 8.\n"
+      "No error found in searcher 1.\n"
      ]
     }
    ],
    "source": [
     "# read optional error message\n",
-    "ridge.read_search_error(searcher_id=8)"
+    "ridge.read_search_error(searcher_id=1)"
    ]
   },
   {
